--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,11 @@
                             <i class="fas fa-calculator"></i> Finanzas
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin/pagos">
+                            <i class="fas fa-credit-card"></i> Pagos
+                        </a>
+                    </li>
                     {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="/propietario/dashboard">
@@ -53,6 +58,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/propietario/estado-cuenta">
                             <i class="fas fa-file-invoice"></i> Estado de Cuenta
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/propietario/mis-pagos">
+                            <i class="fas fa-credit-card"></i> Mis Pagos
                         </a>
                     </li>
                     {% endif %}
