--- a/templates/propietario/dashboard.html
+++ b/templates/propietario/dashboard.html
@@ -158,9 +158,9 @@
                             </a>
                         </div>
                         <div class="col-md-3 mb-3">
-                            <a href="#" class="btn btn-outline-success w-100 p-3">
+                            <a href="/propietario/mis-pagos" class="btn btn-outline-success w-100 p-3">
                                 <i class="fas fa-credit-card fa-2x d-block mb-2"></i>
-                                Realizar<br>Pago
+                                Mis Pagos<br>y Cuotas
                             </a>
                         </div>
                         <div class="col-md-3 mb-3">
