--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -103,15 +103,15 @@
                             </a>
                         </div>
                         <div class="col-md-4 mb-3">
-                            <a href="/admin/finanzas" class="btn btn-outline-info w-100 p-3">
-                                <i class="fas fa-calculator fa-2x d-block mb-2"></i>
-                                Gestión<br>Financiera
+                            <a href="/admin/pagos" class="btn btn-outline-success w-100 p-3">
+                                <i class="fas fa-credit-card fa-2x d-block mb-2"></i>
+                                Sistema de<br>Pagos
                             </a>
                         </div>
                         <div class="col-md-4 mb-3">
-                            <a href="/admin/presupuestos" class="btn btn-outline-primary w-100 p-3">
-                                <i class="fas fa-chart-line fa-2x d-block mb-2"></i>
-                                Gestionar<br>Presupuestos
+                            <a href="/admin/finanzas" class="btn btn-outline-info w-100 p-3">
+                                <i class="fas fa-calculator fa-2x d-block mb-2"></i>
+                                Gestión<br>Financiera
                             </a>
                         </div>
                         <div class="col-md-4 mb-3">
