--- a/templates/admin/registros_financieros.html
+++ b/templates/admin/registros_financieros.html
@@ -203,7 +203,7 @@
 
                     <div class="mb-3">
                         <label for="fecha_efectiva" class="form-label">Fecha Efectiva *</label>
-                        <input type="date" class="form-control" name="fecha_efectiva" id="fecha_efectiva" value="{{ now().strftime('%Y-%m-%d') }}" required>
+                        <input type="date" class="form-control" name="fecha_efectiva" id="fecha_efectiva" value="" required>
                     </div>
 
                     <div class="row">
@@ -230,7 +230,7 @@
                         <div class="col-md-6">
                             <div class="mb-3">
                                 <label for="año_aplicable" class="form-label">Año Aplicable</label>
-                                <input type="number" class="form-control" name="año_aplicable" id="año_aplicable" value="{{ now().year }}">
+                                <input type="number" class="form-control" name="año_aplicable" id="año_aplicable" value="">
                             </div>
                         </div>
                     </div>
